# supportdoc-rag-chatbot

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  PROPOSAL.md  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  epic-00-project-foundations.yml  epic-01-corpus-licensing.yml  epic-02-ingestion.yml  epic-03-embeddings-index.yml  epic-04-retrieval-baselines.yml  epic-05-citations-refusal.yml  epic-06-backend-api.yml  epic-07-frontend-mvp.yml  epic-08-evaluation.yml  epic-09-infra-aws.yml  epic-10-final-readiness.yml  epic-11-local-interactive-web-demo.yml  epic-12-aws-deployment-execution.yml  task.yml
docker/: backend.Dockerfile
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
policies/: prompt_rules.md
scripts/: bootstrap.sh  reset-dev-env.sh  run-api-local.sh  smoke-artifact-api.sh  smoke-browser-demo.sh  smoke-cloud-runtime.sh  smoke-container-runtime.sh  supportdoc_openai_stub.py  updated_bootstrap.sh  verify-aws-task1.sh
tests/: conftest.py  test_api_app.py  test_api_logging.py  test_api_query.py  test_artifact_api_smoke.py  test_aws_cloud_runtime.py  test_aws_deployment_docs.py  test_aws_task1_1_oidc_workflow.py  test_aws_task1_foundation_assets.py  test_bm25_baseline.py  test_browser_demo_contract.py  test_browser_smoke_checklist.py  test_chunker.py  test_citation_validator.py  test_citation_validator_smoke_cli.py  test_cloud_runtime_smoke.py  test_container_ci_workflow.py  test_container_packaging.py  test_container_runtime_smoke.py  test_dense_retrieval_baseline.py  test_dev_qa_dataset.py  test_embeddings.py  test_faiss_backend.py  test_final_evidence_review.py  test_frontend_config.py  test_frontend_live_query.py  test_frontend_scaffold.py  test_generation_client.py  test_hybrid_baseline.py  test_inference.py  test_ingestion.py  test_local_api_workflow.py  test_local_platform_notes.py  test_local_run_workflow.py  test_mvp_readiness_docs.py  test_openai_compatible_generation_client.py  test_parser_issue1.py  test_pgvector_backend.py  test_pgvector_promotion_cli.py  test_pgvector_query_retriever.py  (+13 more)
(+140 files in other folders)
